objects/LLC_BI__Product_Feature__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Product_Term_Type__c</fullName>
        <description>Product Term Type</description>
        <inlineHelpText>This is the time period used to describe the length of a Certificate term, which is used in conjunction with the number of such periods.</inlineHelpText>
        <label>Product Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Quarter(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Purpose_Code__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to determine what the purpose code is for a group of products.</description>
        <label>Purpose Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Ceiling__c</fullName>
        <description>The user manually populates this optional percent field to specify the maximum threshold of a loan&apos;s interest rate for a set period of time. By default, it is blank.</description>
        <inlineHelpText>Enter the desired maximum threshold for the loan interest rate.</inlineHelpText>
        <label>Rate Ceiling</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Percent__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It is the amount by which a variable rate may change within the specified term.</description>
        <inlineHelpText>The amount by which a variable rate may change within the specified term.</inlineHelpText>
        <label>Rate Change Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Period_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the period of time between periodic rate changes.</description>
        <inlineHelpText>Specifies the period of time between periodic rate changes.</inlineHelpText>
        <label>Rate Change Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Period__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies how often the variable rate can change.</description>
        <inlineHelpText>Specifies how often the variable rate can change.</inlineHelpText>
        <label>Rate Change Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>At any time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Floor__c</fullName>
        <description>The user manually populates this optional percent field field to specify the minimum threshold of a loan&apos;s interest rate for a set period of time. By default, it is blank.</description>
        <inlineHelpText>Enter the desired minimum threshold for the loan interest rate.</inlineHelpText>
        <label>Rate Floor</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Maximum_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, a rate ceiling applies on the account. If disabled, this field is not used. By default, it is disabled.</description>
        <inlineHelpText>If true a rate ceiling applies on the account.</inlineHelpText>
        <label>Rate Maximum Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Maximum__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the highest interest rate that can apply to the account.</description>
        <inlineHelpText>The highest interest rate that can apply to the account.</inlineHelpText>
        <label>Rate Maximum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Minimum_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If true, a rate floor applies to the account. If disabled, this field is not used. By default, it is disabled.</description>
        <inlineHelpText>If true a rate floor applies to the account.</inlineHelpText>
        <label>Rate Minimum Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the rate type that will apply to the account.</description>
        <inlineHelpText>Specifies the rate type that will apply to the account.</inlineHelpText>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Tier A</fullName>
                </value>
                <value>
                    <fullName>Tier B</fullName>
                </value>
                <value>
                    <fullName>Stepped</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reg_Capital_Allocation_CET__c</fullName>
        <description>This field is a percent of loan amount that is to be held by the Financial Institution in common equity tier 1.</description>
        <label>Regulatory Capital Allocation (CET1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reg_Capital_Allocation_nonCET__c</fullName>
        <description>This field is a percent of loan amount that is to be held by the Financial Institution not in common equity tier 1.</description>
        <label>Regulatory Capital Allocation (Non-CET1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Renewal_Interest_Rate_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the interest rate at which the account will be renewed.</description>
        <inlineHelpText>Specifies the interest rate at which the account will be renewed.</inlineHelpText>
        <label>Renewal Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Basis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Renewal_Interest_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the new interest or dividend rate upon automatic renewal.</description>
        <inlineHelpText>The new interest or dividend rate upon automatic renewal.</inlineHelpText>
        <label>Renewal Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. When enabled, it is used as a flag for the product feature to specify a product should be securedl. When disabled, it is used to specify a product does not need to be secured. By default, it is disabled. This field is typically used for approval process routing in conjunction with the Secured Individual Lending Authority and Unsecured Individual Lending Authority fields on the User object.</description>
        <label>Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Set_Contingent_Percent_to_100__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Administrators select this optional boolean field to tell the system that the Set Contingent Percentage to 100% system property should fire for the specific Product Feature. By default, it is true.</description>
        <inlineHelpText>Select this checkbox to tell the system that the Set Contingent Percentage to 100% system property should fire for the specific Product Feature.</inlineHelpText>
        <label>Set Contingent Percentage to 100%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stair_Step_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The administrator populates this optional field where a value of True indicates the interest rate is allowed to decrease below the teaser rate over the term of the loan and a value of False indicates the interest rate cannot decrease below the teaser rate.</description>
        <inlineHelpText>This field is checked when the interest rate is allowed to decrease below the teaser rate over the term of the loan and unchecked when the interest rate cannot decrease below the teaser rate.</inlineHelpText>
        <label>Stair Step Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Interest_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the interest rate that applies to the corresponding step.</description>
        <inlineHelpText>The interest rate that applies to the corresponding step.</inlineHelpText>
        <label>Step Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the period of time the corresponding step rate applies to.</description>
        <inlineHelpText>Specifies the period of time the corresponding step rate will apply.</inlineHelpText>
        <label>Step Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the number of periods that the corresponding stepped rate applies to.</description>
        <inlineHelpText>The number of periods that the corresponding stepped rate will apply.</inlineHelpText>
        <label>Step Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Subline_Type__c</fullName>
        <description>This picklist is used to indicate a product feature that specifies the subline type of a note.</description>
        <inlineHelpText>Specifies the subline type of a note.</inlineHelpText>
        <label>Subline Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment Acquisition</fullName>
                </value>
                <value>
                    <fullName>Asset Acquisition</fullName>
                </value>
                <value>
                    <fullName>Term Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Step__c</fullName>
        <description>The user populates this required number field to specify the number of payments between increases in interest rate after the teaser term passes.</description>
        <inlineHelpText>Enter the number of payments between increases in interest rates after the passed teaser term.</inlineHelpText>
        <label>Term Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Interest_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the interest rate that applies to the corresponding tier.</description>
        <inlineHelpText>The interest rate that applies to the corresponding tier.</inlineHelpText>
        <label>Tiered Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Margin_Percent__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers. If the margin will be subtracted from the index, this value would be negative. If the margin will be added to the index this value will be positive.</description>
        <inlineHelpText>The percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</inlineHelpText>
        <label>Tiered Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unused_CreditConversionFactor__c</fullName>
        <description>This field is used to calculate the unused amount of the loan for Exposure At Default calculations.</description>
        <label>Unused Credit Conversion Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Use_Teaser_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually selects this checkbox field to indicate that the system should calculate the loan using the value entered in the Teaser Rate field and Teaser Term field for an initial draw period and calculate the loan with the Interest Rate for the remaining term. By default, this field is blank.</description>
        <inlineHelpText>Select this checkbox to use the Teaser Rate and Teaser Term in loan calculations.</inlineHelpText>
        <label>Calculate with Teaser Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Used_CreditConversionFactor__c</fullName>
        <description>This field is used to calculate the used amount of the loan for Exposure At Default calculations.</description>
        <label>Used Credit Conversion Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Feature</label>
    <nameField>
        <displayFormat>Product_Feature-{00000}</displayFormat>
        <label>Product Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>